--- a/secrets/minio.yaml
+++ b/secrets/minio.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 stringData:
   username: admin
-  password: [PASSWORD] #MUST BE MIN. 8 CHARS or MinIO will complain and raise errors.
+  password: mylongpassword #MUST BE MIN. 8 CHARS or MinIO will complain and raise errors.
