--- a/jobs/kustomization.yaml
+++ b/jobs/kustomization.yaml
@@ -1,10 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: nemo
 
 resources:
-- pg-bootstrap.yaml
+  - pg-bootstrap.yaml
 
 configMapGenerator:
-- name: pg-schema
-  files:
-    - dbschema.sql=./pg-bootstrap/exported_schema.sql
+  - name: pg-schema
+    files:
+      - dbschema.sql=./pg-bootstrap/exported_schema.sql
+
+generatorOptions:
+  disableNameSuffixHash: false
