reshuffle code for nemo

--- a/deploy/data-catalogue.yaml
+++ b/deploy/data-catalogue.yaml
@@ -3,26 +3,27 @@ kind: Deployment
 metadata:
   name: data-catalogue
   labels:
-    app: data-catalogue
+    app: eros
+    type: frontend
+    deployment: data-catalogue 
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: data-catalogue
+      pod: data-catalogue
   template:
     metadata:
       labels:
-        app: data-catalogue
+        app: eros
+        type: frontend
+        deployment: data-catalogue 
     spec:
       imagePullSecrets:
-        - name: marco-regcred
+        - name: nemo-regcred
       containers:
         - name: data-catalogue
           image: marcothedood/eros4nrg-demo:data-catalogue-v1.6
-          resources:
-            requests:
-              memory: "1Gi"
-              cpu: "500m"
+          imagePullPolicy: Always
           ports:
             - containerPort: 8003
               protocol: TCP
@@ -40,4 +41,3 @@ spec:
                 secretKeyRef:
                   name: postgres-users
                   key: admin.password
-          imagePullPolicy: Always
