--- a/svc/postgres.yaml
+++ b/svc/postgres.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: postgres
   name: postgres
+  labels:
+    app: eros
+    type: backend
+    service: postgres
 spec:
-  ports:
-  # PostgreSQL wire protocol clients.
-  - port: 5432
-    targetPort: 5432
-    name: postgres
   selector:
-    app: postgres
+    app: eros
+    type: backend
+    deployment: postgres
+  ports:
+    - name: postgres
+      port: 5432
+      targetPort: 5432
+  type: ClusterIP
