--- a/clusters/my-cluster/kustomization.yaml
+++ b/clusters/my-cluster/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: nemo
+namespace: nemo-svc
 
 resources:
 - ../../deploy/
@@ -9,7 +9,5 @@ resources:
 - ../../pvcs/
 - ../../namespace/
 - ../../svc/
-- ../../storageclass/
 - ../../ingress/
-- ../../ingressclass/
 - ../../jobs/
