--- a/deploy/keycloak.yaml
+++ b/deploy/keycloak.yaml
@@ -3,16 +3,20 @@ kind: Deployment
 metadata:
   name: keycloak
   labels:
-    app: keycloak
+    app: eros
+    type: backend
+    deployment: keycloak
+
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: keycloak
+      pod: keycloak
   template:
     metadata:
-      labels:
-        app: keycloak
+      app: eros
+      type: backend
+      deployment: keycloak
     spec:
       securityContext:
         runAsUser: 1000
@@ -21,6 +25,7 @@ spec:
       containers:
       - name: keycloak
         image: quay.io/keycloak/keycloak:21.1.2
+        imagePullPolicy: Always
         args:
         - start
         securityContext:
