--- a/deploy/minio.yaml
+++ b/deploy/minio.yaml
@@ -3,20 +3,25 @@ kind: Deployment
 metadata:
   name: minio
   labels:
-    app: minio
+    app: eros
+    type: backend
+    deployment: minio
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: minio
+      pod: minio
   template:
     metadata:
       labels:
-        app: minio
+        app: eros
+        type: backend
+        deployment: minio
     spec:
       containers:
         - name: minio
           image: bitnami/minio:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 9000
               protocol: TCP
