--- a/deploy/postgres.yaml
+++ b/deploy/postgres.yaml
@@ -3,21 +3,25 @@ kind: Deployment
 metadata:
   name: postgres
   labels:
-    app: postgres
+    app: eros
+    type: backend
+    deployment: postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      pod: postgres
   template:
     metadata:
       labels:
-        app: postgres
+        app: eros
+        type: backend
+        deployment: postgres
     spec:
       containers:
       - name: postgres
         image: postgres:14-alpine
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 5432
           name: postgres
