--- a/pvcs/iotdata.yaml
+++ b/pvcs/iotdata.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: iotdata
-  namespace: nemo
 spec:
-  storageClassName: ebs-auto-sc
+  storageClassName: rook-ceph-block
   accessModes:
     - ReadWriteOnce
   resources:
