--- a/svc/iot-stream.yaml
+++ b/svc/iot-stream.yaml
@@ -1,13 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: iot-stream
   name: iot-stream
+  labels:
+    app: eros
+    type: backend
+    service: iot-stream
 spec:
-  ports:
-  - port: 3000
-    targetPort: 3000
-    name: iot-stream
   selector:
-    app: iot-stream
+    app: eros
+    type: backend
+    deployment: iot-stream
+  ports:
+    - name: http
+      port: 3000
+      targetPort: 3000
+  type: ClusterIP
