--- a/svc/training-environment.yaml
+++ b/svc/training-environment.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: training-environment
   name: training-environment
+  labels:
+    app: eros
+    type: backend
+    service: training-environment
 spec:
-  ports:
-  # PostgreSQL wire protocol clients.
-  - port: 8004
-    targetPort: 8004
-    name: training-environment
   selector:
-    app: training-environment
+    app: eros
+    type: backend
+    deployment: training-environment
+  ports:
+    - name: training-environment
+      port: 8004
+      targetPort: 8004
+  type: ClusterIP
