--- a/deploy/data-pipeline.yaml
+++ b/deploy/data-pipeline.yaml
@@ -15,14 +15,41 @@ spec:
         app: data-pipeline
     spec:
       imagePullSecrets:
-        - name: marco-regcred
+        - name: nemo-regcred
+      initContainers:
+      - name: wait-for-migration
+        image: postgres:14-alpine
+        env:
+          - name: PGHOST
+            value: eros-postgres
+          - name: PGPORT
+            value: "5432"
+          - name: PGUSER
+            value: admin
+          - name: PGPASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: postgres-users
+                key: admin.password
+          - name: PGDATABASE
+            value: data
+        command: ["/bin/sh","-c"]
+        args:
+          - |
+            set -e
+            echo "Waiting for migration flag..."
+            until psql -h "$PGHOST" -p "$PGPORT" -U "$PGUSER" -d "$PGDATABASE" -tAc \
+              "SELECT 1 FROM bootstrap.migrations WHERE id='schema-core-v1'" | grep -q 1; do
+              sleep 2
+            done
+            echo "Schema ready."
       containers:
         - name: data-pipeline
-          image: marcothedood/eros4nrg-demo:data-pipeline
-          resources:
-            requests:
-              memory: "1Gi"
-              cpu: "500m"
+          image: nemometaos/eros-data-pipeline
+          # resources:
+          #   requests:
+          #     memory: "1Gi"
+          #     cpu: "500m"
           ports:
             - containerPort: 8002
               protocol: TCP
