--- a/deploy/iot-stream.yaml
+++ b/deploy/iot-stream.yaml
@@ -15,10 +15,10 @@ spec:
         app: iot-stream
     spec:
       imagePullSecrets:
-        - name: marco-regcred
+        - name: nemo-regcred
       containers:
         - name: iot-stream
-          image: marcothedood/eros4nrg-demo:iot-stream
+          image: nemometaos/eros-iot-streams
           ports:
             - containerPort: 8000
               protocol: TCP
