--- a/deploy/training-environment.yaml
+++ b/deploy/training-environment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: nemo-regcred
       containers:
         - name: training-environment
-          image: nemometaos/eros-training-environment
+          image: nemometaos/eros-training-environment:v0.1.1
           ports:
             - containerPort: 8004
               protocol: TCP
